--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="도봉구 창동 퀵서비스 전문. 창동역, 노원역 인근, 농수산물시장 20분 내 신속 픽업. 오토바이, 다마스, 라보 맞춤 배차 및 카드결제 가능.">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://changdong.8222quick.com/">
-
+    <link rel="icon" href="https://8222quick.com/img/favicon.png">
     <meta property="og:title" content="창동 퀵서비스 | 에이플러스 창동퀵">
     <meta property="og:description" content="도봉구 창동 전지역 24시 가장 빠른 퀵배송">
     <meta property="og:url" content="https://changdong.8222quick.com/">
@@ -205,4 +205,5 @@
 </div>
 
 </body>
+
 </html>
